src/test/ui/const-len-underflow-separate-spans.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:20:17
   |
20 |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ miri failed: Overflow(Sub) at $DIR/const-len-underflow-separate-spans.rs:17:20: 17:29

error: aborting due to previous error

